--- a/index.html
+++ b/index.html
@@ -2,20 +2,50 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Document</title>
-    <meta name="description" content="Portfolio for Byounggeon Kim">
-    <meta name="author" content="Byounggeon_kim">
+    <meta name="description" content="Portfolio for Byounggeon Kim"/>
+    <meta name="author" content="Byounggeon_kim"/>
     <script src="https://kit.fontawesome.com/0b79399868.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;1,700&display=swap" rel="stylesheet"/>
     <!-- css => font-family: 'Open Sans', sans-serif; -->
-    <link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon.png">
-    <link rel="stylesheet" href="/style.css"
+    <link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon.png"/>
+    <link rel="stylesheet" href="/style.css"/>
+    <script src="main.js" defer></script>
     
 </head>
 
 <body>
+
+    <!-- Navbar -->
+    <nav id="navbar">
+        <div class="navbar__logo">
+        <i class="fab fa-diaspora"></i>
+        <a herf="#">Byounggeon</a>
+        </div>
+        <div class="navbar__menu">
+            <ul class="navbar__menu">
+                <li class="navbar__menu__tiem">Home</li>
+                <li class="navbar__menu__tiem">About</li>
+                <li class="navbar__menu__tiem">Skills</li>
+                <li class="navbar__menu__tiem">My work</li>
+                <li class="navbar__menu__tiem">Testimonial</li>
+                <li class="navbar__menu__tiem">Contact</li>
+            </ul>
+        </div>   
+    </nav>
+
+
+
+    <section id="about"></section>
+    <section id="skills"></section>
+    <section id="work"></section>
+    <section id="testimonials"></section>
+    <section id="contact"></section>
+
+
+
 
 </body>
 
