--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
     <section id="home">
         <img src="imgs/broc.jpg" alt="Byunggeon's profile photo" class="home__photo"/>
     </section>
-
-
+    <h1 class="home__title">Hi, I'm Byounggeon Kim.</h1>
+    <h2 class="home__description">An Artificial Intelligence Researcher.</h2>
+    <button class="home__contact">Contact</button>
     <!-- About -->
     <section id="about">
 
