--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
             <div class="job">
                 <img src="/imgs/jobs/koreaUniv.png" alt="Korea University" class="job__logo2" />
-                <div class="job__name">Computer Science, Data Mining Lab</div>
+                <div class="job__name">Korea University - Computer Science, Data Mining Lab</div>
                 <div class="job__period">2016.02 ~ 2018.02</div>
             </div>
         </div>
@@ -82,8 +82,78 @@
     </section>
 
 
+    <!-- Skills -->
+    <section id="skills">
+        <h1>Skills</h1>
+        <h2>Skills & Attributes</h2>
+        <p>Artificial Intelligence , Natural Language Processing , Data-Mining , Front-End</p>
+        <div class="skillset">
+            <div class="skillset__left">
+                <h3 class="skillset__title">Skills</h3>
+                <div class="skill">
+                    <div class="skill__description">
+                        <span>Artificial Intelligence</span>
+                        <span>90%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
 
-    <section id="skills"></section>
+                    <div class="skill__description">
+                        <span>HTML</span>
+                        <span>50%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+
+                    <div class="skill__description">
+                        <span>CSS</span>
+                        <span>50%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+
+                    <div class="skill__description">
+                        <span>JavaScript</span>
+                        <span>30%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="skillset__right">
+                <div class="tools">
+                    <h3 class="skillset__title">Tools</h3>
+                    <ul class="tools__list">
+                        <li><span>Visual Studio Code</span></li>
+                        <li><span>Intellij</span></li>
+                        <li><span>Jupyter Lab</span></li>
+                        <li><span>Pycharm</span></li>
+                        <li><span>Tensorflow</span></li>
+                        <li><span>Pytorch</span></li>
+                    </ul>
+
+                </div>
+                <div class="etc__list">
+                    <h3 class="skillset__title">Etc</h3>
+                    <li><span>Git</span></li>
+                    <li><span>Math</span></li>
+                    <li><span>BioInformatics</span></li>
+                    <li><span>Social Skills</span></li>
+                    <li><span>Health</span></li>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+
+
     <section id="work"></section>
     <section id="testimonials"></section>
     <section id="contact"></section>
