--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <section id="skills">
         <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
-        <p>Artificial Intelligence , Natural Language Processing , Data-Mining , Front-End</p>
+        <p>Artificial Intelligence , Natural Language Processing , Data-mining , Front-end</p>
         <div class="skillset">
             <div class="skillset__left">
                 <h3 class="skillset__title">Skills</h3>
@@ -153,8 +153,30 @@
     </section>
 
 
+    <!-- Work -->
+    <section id="work">
+        <h1>My work</h1>
+        <h3>Project</h3>
+        <div class="work__categories">
+            <button class="category__btn"><span>All</span></button>
+            <button class="category__btn"><span>Artificial Intelligence</span></button>
+            <button class="category__btn"><span>Front-end</span></button>
+            <button class="category__btn"><span>Natural Language Processing</span></button>
+        </div>
+        <div class="work__projects">
+            <a href="https://github.com/BroCoLySTyLe/MyPortfolio">
+                <img src="/imgs/broc.jpg" alt="MyPortfolio">
+                <div class="project__description">
+                    <h3>MY Portfolio Website</h3>
+                    <span>Coding with basic HTML and CSS , JavaScript</span>
+                </div>
+            </a>
+        </div>
 
-    <section id="work"></section>
+    </section>
+
+
+
     <section id="testimonials"></section>
     <section id="contact"></section>
 
