--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <button class="category__btn"><span>Natural Language Processing</span></button>
         </div>
         <div class="work__projects">
-            <a href="https://github.com/BroCoLySTyLe/MyPortfolio">
+            <a href="https://github.com/BroCoLySTyLe/MyPortfolio" target="_blank" >
                 <img src="/imgs/broc.jpg" alt="MyPortfolio">
                 <div class="project__description">
                     <h3>MY Portfolio Website</h3>
@@ -176,9 +176,21 @@
     </section>
 
 
-
+    <!-- Testimonials -->
     <section id="testimonials"></section>
-    <section id="contact"></section>
+
+    <!-- Contact -->
+    <section id="contact">
+        <h1 class="contact__title">Let's talk</h1>
+        <h2 class="contact__email">kbg5213@gmail.com</h2>
+        <div class="contact__links">
+            <a href="https://github.com/BroCoLySTyLe" target="_blank">
+            <i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/byounggun-kim-bb2453141/" target="_blank">
+            <i class="fa fa-linkedin-square"></i></a>
+        </div>
+        <p class="contact__rights">2020 Byounggeon's Portfolio - All rights reserved</p>
+    </section>
 
 
 
