--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         </div>
         <div class="navbar__menu">
             <ul class="navbar__menu">
-                <li class="navbar__menu__tiem">Home</li>
-                <li class="navbar__menu__tiem">About</li>
-                <li class="navbar__menu__tiem">Skills</li>
-                <li class="navbar__menu__tiem">My work</li>
-                <li class="navbar__menu__tiem">Testimonial</li>
-                <li class="navbar__menu__tiem">Contact</li>
+                <li class="navbar__menu__item active">Home</li>
+                <li class="navbar__menu__item">About</li>
+                <li class="navbar__menu__item">Skills</li>
+                <li class="navbar__menu__item">My work</li>
+                <li class="navbar__menu__item">Testimonial</li>
+                <li class="navbar__menu__item">Contact</li>
             </ul>
         </div>
     </nav>
