--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <h1 class="home__title">Hi, I'm Byounggeon Kim.</h1>
         <h2 class="home__description">An Artificial Intelligence Researcher.</h2>
-        <button class="home__contact">Contact</button>
+        <button class="home__contact">Contact Me</button>
     </section>
 
 
