--- a/index.html
+++ b/index.html
@@ -53,28 +53,37 @@
     <section id="about">
         <h1>About Me</h1>
         <p>
-            I'm Byounggeon Kim. An Artificial Intelligence Researcher.
+            I'm Byounggeon Kim. I am working as an artificial intelligence researcher. I mainly studied Natural Language Processing and read related papers and implemented the model.
         </p>
         <div class="about__majors">
             <div class="major">
-                <div class="major__icon"></div>
-                <div class="major__title"></div>
-                <div class="major__description"></div>
+                <div class="major__icon"><i class="fas fa-brain"></i></a></div>
+                <h2 class="major__title">Artificial Intelligence</h2>
+                <div class="major__description">NLP , Tensorflow , Pytorch</div>
+            </div>
+            <div class="major">
+                <div class="major__icon"><i class="fas fa-brain"></i></a></div>
+                <h2 class="major__title">Artificial Intelligence</h2>
+                <div class="major__description">NLP , Tensorflow , Pytorch</div>
             </div>
         </div>
 
         <div class="about__jobs">
 
             <div class="job">
-                <img src="/imgs/jobs/TmaxData.png" alt="TmaxData" class="job__logo1" />
-                <div class="job__name">TmaxData - AI researcher (NLP)</div>
-                <div class="job__period">2018.02 ~ Untill now</div>
+                <img src="/imgs/jobs/TmaxData.png" alt="TmaxData" class="job__logo" />
+                <div class="job__description">
+                    <div class="job__name">TmaxData - AI researcher (NLP)</div>
+                    <div class="job__period">2018.02 ~ Untill now</div>
+                </div>
             </div>
 
             <div class="job">
-                <img src="/imgs/jobs/koreaUniv.png" alt="Korea University" class="job__logo2" />
-                <div class="job__name">Korea University - Computer Science, Data Mining Lab</div>
-                <div class="job__period">2016.02 ~ 2018.02</div>
+                <img src="/imgs/jobs/koreaUniv.png" alt="Korea University" class="job__logo_" />
+                <div class="job__description">
+                    <div class="job__name">Korea University - Computer Science, Data Mining Lab</div>
+                    <div class="job__period">2016.02 ~ 2018.02</div>
+                </div>
             </div>
         </div>
 
