make about css_2

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     <!-- Navbar -->
     <nav id="navbar">
         <div class="navbar__logo">
-            <i class="fab fa-diaspora"></i>
+            <!-- <img src="imgs/favicon.png" alt=""> -->
+            <!-- <i class="fas fa-star-half-alt"></i> -->
+            <!-- <i class="fas fa-battery-full"></i> -->
+            <i class="far fa-star"></i>
             <a herf="#">Byounggeon</a>
         </div>
         <div class="navbar__menu">
