--- a/index.html
+++ b/index.html
@@ -105,35 +105,63 @@
                 <div class="skill">
                     <div class="skill__description">
                         <span>Artificial Intelligence</span>
-                        <span>90%</span>
+                        <span>85%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width: 85%"></div>
                     </div>
 
                     <div class="skill__description">
-                        <span>HTML</span>
-                        <span>50%</span>
+                        <span>Python</span>
+                        <span>75%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width: 75%"></div>
+                    </div>
+
+
+                    <div class="skill__description">
+                        <span>Pytorch</span>
+                        <span>65%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value" style="width: 65%"></div>
+                    </div>
+
+
+
+                    <div class="skill__description">
+                        <span>HTML</span>
+                        <span>65%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value" style="width: 65%"></div>
                     </div>
 
                     <div class="skill__description">
                         <span>CSS</span>
-                        <span>50%</span>
+                        <span>55%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width: 55%"></div>
                     </div>
 
                     <div class="skill__description">
                         <span>JavaScript</span>
-                        <span>30%</span>
+                        <span>35%</span>
                     </div>
                     <div class="skill__bar">
-                        <div class="skill__value"></div>
+                        <div class="skill__value" style="width: 35%"></div>
                     </div>
+
+                    <div class="skill__description">
+                        <span>React</span>
+                        <span>15%</span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value" style="width: 15%"></div>
+                    </div>
+
 
                 </div>
             </div>
@@ -146,16 +174,16 @@
                         <li><span>Intellij</span></li>
                         <li><span>Jupyter Lab</span></li>
                         <li><span>Pycharm</span></li>
-                        <li><span>Tensorflow</span></li>
-                        <li><span>Pytorch</span></li>
+                        <li><span>Git</span></li>
+
                     </ul>
 
                 </div>
                 <div class="etc__list">
                     <h3 class="skillset__title">Etc</h3>
-                    <li><span>Git</span></li>
                     <li><span>Math</span></li>
                     <li><span>BioInformatics</span></li>
+                    <li><span>Investing</span></li>
                     <li><span>Social Skills</span></li>
                     <li><span>Health</span></li>
                 </div>
@@ -168,12 +196,12 @@
     <!-- Work -->
     <section id="work">
         <h1>My work</h1>
-        <h3>Project</h3>
+        <h3>Projects</h3>
         <div class="work__categories">
-            <button class="category__btn"><span>All</span></button>
-            <button class="category__btn"><span>Artificial Intelligence</span></button>
-            <button class="category__btn"><span>Front-end</span></button>
-            <button class="category__btn"><span>Natural Language Processing</span></button>
+            <button class="category__btn active">All <span class="category__count">8</button>
+            <button class="category__btn">Artificial Intelligence <span class="category__count">3</button>
+            <button class="category__btn">Front-end <span class="category__count">3</button>
+            <button class="category__btn">Natural Language Processing <span class="category__count">2</button>
         </div>
         <div class="work__projects">
             <a href="https://github.com/BroCoLySTyLe/MyPortfolio" target="_blank" >
