project css and add pictures

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <!-- Home -->
     <section id="home">
-        <img src="imgs/broc.jpg" alt="Byunggeon's profile photo" class="home__photo" />
+        <img src="imgs/KBG.jpg" alt="Byunggeon's profile photo" class="home__photo" />
 
         <h1 class="home__title">Hi, I'm Byounggeon Kim.</h1>
         <h2 class="home__description">An Artificial Intelligence Researcher.</h2>
@@ -62,12 +62,17 @@
             <div class="major">
                 <div class="major__icon"><i class="fas fa-brain"></i></a></div>
                 <h2 class="major__title">Artificial Intelligence</h2>
-                <div class="major__description">NLP , Tensorflow , Pytorch</div>
+                <div class="major__description">NLP, Language Representation, Tensorflow, Pytorch</div>
             </div>
             <div class="major">
-                <div class="major__icon"><i class="fas fa-brain"></i></a></div>
-                <h2 class="major__title">Artificial Intelligence</h2>
-                <div class="major__description">NLP , Tensorflow , Pytorch</div>
+                <div class="major__icon"><i class="fab fa-html5"></i></a></div>
+                <h2 class="major__title">Front-end</h2>
+                <div class="major__description">HTTP, CSS, JavaScript, React</div>
+            </div>
+            <div class="major">
+                <div class="major__icon"><i class="fas fa-crosshairs"></i></a></div>
+                <h2 class="major__title">Data-mining</h2>
+                <div class="major__description">Text-mining</div>
             </div>
         </div>
 
@@ -204,13 +209,41 @@
             <button class="category__btn">Natural Language Processing <span class="category__count">2</button>
         </div>
         <div class="work__projects">
-            <a href="https://github.com/BroCoLySTyLe/MyPortfolio" target="_blank" >
-                <img src="/imgs/broc.jpg" alt="MyPortfolio">
+            <a class="project" href="https://github.com/BroCoLySTyLe/MyPortfolio" target="_blank" >
+                <img class="project__img" src="/imgs/MyPortfolio.PNG" alt="MyPortfolio">
                 <div class="project__description">
                     <h3>MY Portfolio Website</h3>
                     <span>Coding with basic HTML and CSS , JavaScript</span>
                 </div>
             </a>
+
+            <a class="project" href="https://github.com/BroCoLySTyLe/MyPortfolio" target="_blank" >
+                <img class="project__img" src="/imgs/broc.jpg" alt="Chatbot Platform Front-end">
+                <div class="project__description">
+                    <h3>Hi-Tee Studio <br>(Chatbot Platform Front-end)</h3>
+                    <span>Coding with TOP(Tmax's Front-end IDE) HTML and CSS , JavaScript</span>
+                </div>
+            </a>
+
+
+            
+            <a class="project" href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/s12859-018-2029-1" target="_blank" >
+                <img class="project__img" src="/imgs/VarDrugPub.PNG" alt="VarDrugPub">
+                <div class="project__description">
+                    <h3>VarDrugPub<br>(Text-mining)</h3>
+                    <span>Biomedical problem solution with Text-mining</span>
+                </div>
+            </a>
+
+
+            <a class="project" href="http://203.255.191.229:8080/chimerdbv31/mchimerpub.cdb" target="_blank" >
+                <img class="project__img" src="/imgs/ChimerPub.PNG" alt="VarDrugPub">
+                <div class="project__description">
+                    <h3>ChimerPub<br>(Text-mining)</h3>
+                    <span>Biomedical problem solution with Text-mining</span>
+                </div>
+            </a>
+
         </div>
 
     </section>
