home opacity, add arrow

--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
 
     <!-- Home -->
     <section id="home">
-        <img src="imgs/KBG.jpg" alt="Byunggeon's profile photo" class="home__photo" />
-
-        <h1 class="home__title">Hi, I'm Byounggeon Kim.</h1>
-        <h2 class="home__description">An Artificial Intelligence Researcher.</h2>
-        <button class="home__contact">Contact Me</button>
+        <div class="home__container">
+            <img src="imgs/KBG.jpg" alt="Byunggeon's profile photo" class="home__photo" />
+            <h1 class="home__title">Hi, I'm Byounggeon Kim.</h1>
+            <h2 class="home__description">An Artificial Intelligence Researcher.</h2>
+            <button class="home__contact">Contact Me</button>
+        </div>
     </section>
 
 
@@ -261,10 +262,13 @@
             <i class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/byounggun-kim-bb2453141/" target="_blank">
             <i class="fa fa-linkedin-square"></i></a>
+
+
         </div>
         <p class="contact__rights">2020 Byounggeon's Portfolio - All rights reserved</p>
     </section>
-
+    <button class ="arrow-up"><i class="far fa-arrow-alt-circle-up"></i>
+    </button>
 
 
 
