window size variation navbar and 1st complete version

--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
             <!-- <i class="fas fa-battery-full"></i> -->
             <i class="far fa-star"></i>
             <a herf="#">Byounggeon</a>
+            <button class ="hamberger"><i class="fas fa-bars"></i></button>
         </div>
         <div class="navbar__menu">
-            <ul class="navbar__menu">
-                <li class="navbar__menu__item active" data-link="#home">Home</li>
+            <ul class="navbar__menus">
+                <li class="navbar__menu__item" data-link="#home">Home</li>
                 <li class="navbar__menu__item" data-link="#about">About</li>
                 <li class="navbar__menu__item" data-link="#skills">Skills</li>
                 <li class="navbar__menu__item" data-link="#work">My work</li>
@@ -38,10 +39,11 @@
                 <li class="navbar__menu__item" data-link="#contact">Contact</li>
             </ul>
         </div>
+
     </nav>
 
 
-
+<div id="mainpages">
     <!-- Home -->
     <section id="home">
         <div class="home__container">
@@ -51,8 +53,6 @@
             <button class="home__contact">Contact Me</button>
         </div>
     </section>
-
-
     <!-- About -->
     <section id="about">
         <h1>About Me</h1>
@@ -100,8 +100,6 @@
 
 
     </section>
-
-
     <!-- Skills -->
     <section id="skills">
         <h1>Skills</h1>
@@ -199,8 +197,6 @@
 
         </div>
     </section>
-
-
     <!-- Work -->
     <section id="work">
         <h1>My work</h1>
@@ -252,11 +248,8 @@
         </div>
 
     </section>
-
-
     <!-- Testimonials -->
     <section id="testimonials"></section>
-
     <!-- Contact -->
     <section id="contact">
         <h1 class="contact__title">Let's talk</h1>
@@ -271,6 +264,8 @@
         </div>
         <p class="contact__rights">2020 Byounggeon's Portfolio - All rights reserved</p>
     </section>
+</div>
+
     <button class ="arrow-up"><i class="far fa-arrow-alt-circle-up"></i>
     </button>
 
